CN Weekly - 20th June 2024

--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -2310,6 +2310,7 @@
      "iopub.status.idle": "2024-06-20T02:44:40.688041Z",
      "shell.execute_reply": "2024-06-20T02:44:40.687500Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012763,
      "end_time": "2024-06-20T02:44:40.689130",
@@ -2337,6 +2338,67 @@
     "# Testing the solution\n",
     "assert compressTheString(\"aaabbddccc\") == \"a3b2d2c3\"\n",
     "assert compressTheString(\"ggttttffffrreee\") == \"g2t4f4r2e3\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15fcfdd1",
+   "metadata": {},
+   "source": [
+    "CN Weekly contest: 20th June 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d5bb9b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maximumElements(N: int, arr: list[int]) -> int:\n",
+    "    odd = even = 0\n",
+    "    for n in arr:\n",
+    "        if n % 2 == 1:\n",
+    "            odd += 1\n",
+    "        else:\n",
+    "            even += 1\n",
+    "\n",
+    "    if odd == 0:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return even + odd - int(odd % 2 == 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumElements(4, [9,5,1,6]) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feca4414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Supercomputer\n",
+    "def canAccess(N: int, K: int, arr: list[int]) -> int:\n",
+    "    arr.sort()\n",
+    "    count = 0\n",
+    "    for i in range(N - 2):\n",
+    "        for j in range(i + 1, N - 1):\n",
+    "            target = K ^ arr[i] ^ arr[j]\n",
+    "            left = bisect.bisect_left(arr, target, j + 1)\n",
+    "            right = bisect.bisect_right(arr, target, j + 1)\n",
+    "            if left < N and arr[left] == target:\n",
+    "                count += right - left\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canAccess(6, 13, [2,2,8,7,7,9]) == 4\n",
+    "assert canAccess(7, 5, [7,2,5,5,2,4,7]) == 4\n",
+    "assert canAccess(6, 1, [5,6,5,2,1,7]) == 3"
    ]
   }
  ],
