LC VC - 21st June 2024 + GFG Jobathon

--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -2408,6 +2408,7 @@
      "iopub.status.idle": "2024-06-20T16:42:53.808093Z",
      "shell.execute_reply": "2024-06-20T16:42:53.807662Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014237,
      "end_time": "2024-06-20T16:42:53.809169",
@@ -2437,6 +2438,300 @@
     "assert canAccess(6, 13, [2,2,8,7,7,9]) == 4\n",
     "assert canAccess(7, 5, [7,2,5,5,2,4,7]) == 4\n",
     "assert canAccess(6, 1, [5,6,5,2,1,7]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cee6356e",
+   "metadata": {},
+   "source": [
+    "Maximum magnetic force between two balls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97865321",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxDistance(positions: list[int], m: int) -> int:\n",
+    "    def is_possible(max_sum: int) -> bool:\n",
+    "        prev, k = -max_sum, m\n",
+    "        for n in positions:\n",
+    "            if n - prev >= max_sum:\n",
+    "                k, prev = k - 1, n\n",
+    "\n",
+    "        return k <= 0\n",
+    "\n",
+    "    # Sort the positions and use a binary search approach, greedily checking if maxsum is possible each time\n",
+    "    positions.sort()\n",
+    "\n",
+    "    low, high = 1, positions[-1] - positions[0]\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if is_possible(mid):\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxDistance([1,2,3,4,7], 3) == 3\n",
+    "assert maxDistance([5,4,3,2,1,1000000000], 2) == 999999999\n",
+    "assert maxDistance([5,4,3,2,1,1000000000], 3) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ec9ef7",
+   "metadata": {},
+   "source": [
+    "LC Virtual: 21st June 2024\n",
+    "Link: https://leetcode.com/contest/smarking-algorithm-contest/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "685dcfe2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1: Path Sum - III\n",
+    "def pathSum(root: BinaryTreeNode, targetSum: int) -> int:\n",
+    "    count = 0\n",
+    "    def backtrack(curr: BinaryTreeNode) -> dict[int, int]:\n",
+    "        nonlocal count\n",
+    "        if not curr:\n",
+    "            return dict()\n",
+    "        else:\n",
+    "            left: dict[int, int] = backtrack(curr.left)\n",
+    "            right: dict[int, int] = backtrack(curr.right)\n",
+    "            result: dict[int, int] = dict()\n",
+    "            for k, v in left.items():\n",
+    "                result[k + curr.val] = result.get(k + curr.val, 0) + v\n",
+    "            for k, v in right.items():\n",
+    "                result[k + curr.val] = result.get(k + curr.val, 0) + v\n",
+    "            result[curr.val] = result.get(curr.val, 0) + 1\n",
+    "            count += result.get(targetSum, 0)\n",
+    "            return result\n",
+    "\n",
+    "    backtrack(root)\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert pathSum(BinaryTreeNode.from_array([10,5,-3,3,2,None,11,3,-2,None,1]), 8) == 3\n",
+    "assert pathSum(BinaryTreeNode.from_array([5,4,8,11,None,13,4,7,2,None,None,5,1]), 22) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4adac14c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2: Find all anagrams in a string\n",
+    "def findAnagrams(s: str, p: str) -> list[int]:\n",
+    "    def compare(freq1: dict[str, int], freq2: dict[str, int]) -> bool:\n",
+    "        for k, v in freq1.items():\n",
+    "            if k not in freq2 or v != freq2[k]:\n",
+    "                return False\n",
+    "        return True if freq1 else False\n",
+    "\n",
+    "    NS, NP = len(s), len(p)\n",
+    "    p_freq: collections.Counter = collections.Counter(p)\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    # J is not included in slice\n",
+    "    i = j = 0\n",
+    "    s_freq: dict[str, int] = {}\n",
+    "    while j <= NS:\n",
+    "        while j < NS and j - i < NP:\n",
+    "            s_freq[s[j]] = s_freq.get(s[j], 0) + 1\n",
+    "            j += 1\n",
+    "\n",
+    "        comparison = compare(s_freq, p_freq)\n",
+    "\n",
+    "        # Anagram\n",
+    "        if comparison == 1:\n",
+    "            result.append(i)\n",
+    "        if j < NS:\n",
+    "            s_freq[s[i]] = s_freq[s[i]] - 1\n",
+    "            s_freq[s[j]] = s_freq.get(s[j], 0) + 1\n",
+    "            if s_freq[s[i]] == 0:\n",
+    "                s_freq.pop(s[i])\n",
+    "        i, j = i + 1, j + 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findAnagrams(\"cbaebabacd\", \"abc\") == [0, 6]\n",
+    "assert findAnagrams(\"abab\", \"ab\") == [0,1,2]\n",
+    "assert findAnagrams(\"aa\", \"bb\") == []\n",
+    "assert findAnagrams(\"baa\", \"aa\") == [1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3baca05",
+   "metadata": {},
+   "source": [
+    "Upsolving: Kth Smallest in lexicographical ordering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96e9972",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/k-th-smallest-in-lexicographical-order/solutions/92242/concise-easy-to-understand-java-5ms-solution-with-explaination/\n",
+    "def findKthNumber(n: int, k: int) -> int:\n",
+    "    def countSteps(n1: int, n2: int) -> int:\n",
+    "        steps = 0\n",
+    "        while n1 <= n:\n",
+    "            steps += min(n2, n + 1) - n1\n",
+    "            n1, n2 = n1 * 10, n2 * 10\n",
+    "\n",
+    "        return steps\n",
+    "\n",
+    "    # Move k - 1 steps\n",
+    "    curr = 1\n",
+    "    while k > 1:\n",
+    "        steps = countSteps(curr, curr + 1)\n",
+    "        if steps <= k:\n",
+    "            curr, k = curr + 1, k - steps\n",
+    "        else:\n",
+    "            curr, k = curr * 10, k - 1\n",
+    "\n",
+    "    return curr\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findKthNumber(13, 2) == 10\n",
+    "assert findKthNumber(100, 5) == 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0131247e",
+   "metadata": {},
+   "source": [
+    "GFG Hiring Challenge: 21st June 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70464abf",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def modifyMEX(N : int, arr : list[int]) -> int:\n",
+    "    freq: collections.Counter = collections.Counter(arr)\n",
+    "    prev = -1\n",
+    "    for i in range(0, int(1e6) + 1):\n",
+    "        if i not in freq:\n",
+    "            return prev\n",
+    "        else:\n",
+    "            prev = freq[i] if prev == -1 else min(freq[i], prev)\n",
+    "\n",
+    "    return prev\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert modifyMEX(6, [0,1,2,2,3,5]) == 1\n",
+    "assert modifyMEX(4, [1,2,3,4]) == -1\n",
+    "assert modifyMEX(4, [0,1,1,1]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f4b7a46",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countPairs(N: int, K: int, arr: list[int]) -> int:\n",
+    "    count: int = 0\n",
+    "    indices: dict[int, dict[int, int]] = dict()\n",
+    "    for i in range(N):\n",
+    "        idx, num = i + 1, arr[i]\n",
+    "        index_dp: dict[int, int] = indices.get(num, dict())\n",
+    "        idx %= K\n",
+    "        count += index_dp.get(K - idx if idx > 0 else 0, 0)\n",
+    "        index_dp[idx] = index_dp.get(idx, 0) + 1\n",
+    "        indices[num] = index_dp\n",
+    "\n",
+    "    return int(count % (1e9 + 7))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countPairs(5, 3, [1,2,3,2,1]) == 2\n",
+    "assert countPairs(6, 4, [1,1,1,1,1,1]) == 3\n",
+    "assert countPairs(8, 2, [0,1,2,1,3,1,4,1]) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de822d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxEdgeSumBrute(N: int, edges: list[list[int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    Naive solution: Apply modified djikistra's algorithm for each vertex.\n",
+    "    Increase sum for each pair.\n",
+    "    \"\"\"\n",
+    "    def BFS(src: int) -> int:\n",
+    "        distances: dict[int, int] = dict()\n",
+    "        queue: collections.deque = collections.deque([(src, 0)])\n",
+    "\n",
+    "        # Apply Dijkstra\n",
+    "        while queue:\n",
+    "            curr, dist = queue.popleft()\n",
+    "            distances[curr] = dist\n",
+    "            for next_, next_dist in adj[curr]:\n",
+    "                if next_ not in distances:\n",
+    "                    queue.append((next_, max(next_dist, dist)))\n",
+    "\n",
+    "        edge_sum = 0\n",
+    "        for k, v in distances.items():\n",
+    "            edge_sum += v if k > src else 0\n",
+    "\n",
+    "        return edge_sum\n",
+    "\n",
+    "    # Convert edges into ADJ List\n",
+    "    adj: dict[int, list[tuple[int, int]]] = dict()\n",
+    "    for n1, n2, w in edges:\n",
+    "        n1_neighbours, n2_neighbours = adj.get(n1, []), adj.get(n2, [])\n",
+    "        n1_neighbours.append((n2, w))\n",
+    "        n2_neighbours.append((n1, w))\n",
+    "        adj[n1], adj[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    sum_: int = 0\n",
+    "    for src in range(1, N + 1):\n",
+    "        sum_ += BFS(src)\n",
+    "\n",
+    "    return sum_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxEdgeSumBrute(3, [[1,2,2], [1,3,4]]) == 10\n",
+    "assert maxEdgeSumBrute(4, [[1,2,1], [2,4,3], [1,3,3]]) == 16"
    ]
   }
  ],
