--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -2816,6 +2816,7 @@
      "iopub.status.idle": "2024-06-21T17:12:45.430914Z",
      "shell.execute_reply": "2024-06-21T17:12:45.430484Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016054,
      "end_time": "2024-06-21T17:12:45.431946",
@@ -2867,6 +2868,163 @@
     "# Testing the solution\n",
     "assert maxEdgeSumBrute(3, [[1,2,2], [1,3,4]]) == 10\n",
     "assert maxEdgeSumBrute(4, [[1,2,1], [2,4,3], [1,3,3]]) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66bebb7",
+   "metadata": {},
+   "source": [
+    "LC Daily question: Count number of nice subarrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a269a21c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def numberOfSubarrays(nums: list[int], K: int) -> int:\n",
+    "    def countSubArrays(k: int) -> int:\n",
+    "        subArrayCount = oddCount = 0\n",
+    "        i = j = 0\n",
+    "        while j < N:\n",
+    "            oddCount += nums[j] % 2\n",
+    "            # Shrink until valid\n",
+    "            while oddCount > k:\n",
+    "                oddCount -= nums[i] % 2\n",
+    "                i += 1\n",
+    "            subArrayCount += j - i + 1\n",
+    "            j += 1\n",
+    "\n",
+    "        return subArrayCount\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return countSubArrays(K) - countSubArrays(K - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfSubarrays([1,1,2,1,1], 3) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b99196d",
+   "metadata": {},
+   "source": [
+    "Codeforces: Magnitude (https://codeforces.com/problemset/problem/1984/C1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e683e9e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def magnitudeBrute(arr: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, c: int) -> int:\n",
+    "        if i >= N:\n",
+    "            return c\n",
+    "        else:\n",
+    "            opt1 = backtrack(i + 1, c + arr[i])\n",
+    "            opt2 = backtrack(i + 1, abs(c + arr[i]))\n",
+    "            return max(opt1, opt2)\n",
+    "\n",
+    "    N = len(arr)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert magnitudeBrute([10, -9, -3, 4]) == 6\n",
+    "assert magnitudeBrute([1,4,3,4,1,4,3,4]) == 24"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beab9c5b",
+   "metadata": {},
+   "source": [
+    "LC Biweekly: 21st June 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20d1fa4",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "# find-minimum-operations-to-make-all-elements-divisible-by-three/description/\n",
+    "def minimumOperations(nums: list[int]) -> int:\n",
+    "    count = 0\n",
+    "    for n in nums:\n",
+    "        count += int(n % 3 in (1, 2))\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumOperations([1,2,3,4]) == 3\n",
+    "assert minimumOperations([3,6,9]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f67c07a3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minOperationsI(nums: list[int]) -> int:\n",
+    "    def flip(idx: int) -> None:\n",
+    "        for j in range(3):\n",
+    "            nums[idx + j] = 1 if nums[idx + j] == 0 else 0\n",
+    "\n",
+    "    N, count = len(nums), 0\n",
+    "    for i in range(N):\n",
+    "        if nums[i] == 0:\n",
+    "            if i + 3 <= N:\n",
+    "                count += 1\n",
+    "                flip(i)\n",
+    "            else:\n",
+    "                return -1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minOperationsI([0,1,1,1,0,0]) == 3\n",
+    "assert minOperationsI([0,1,1,1]) == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dcbed68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minOperationsII(nums: list[int]) -> int:\n",
+    "    N, count, flip = len(nums), 0, False\n",
+    "    for i in range(N):\n",
+    "        nums[i] = nums[i] if not flip else int(not nums[i])\n",
+    "        if nums[i] == 0:\n",
+    "            flip = not flip\n",
+    "            count += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minOperationsII([0,1,1,0,1]) == 4\n",
+    "assert minOperationsII([1,0,0,0]) == 1"
    ]
   }
  ],
