LC Weekly Contest - 23rd June 2024

--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -3009,7 +3009,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2dcbed68",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def minOperationsII(nums: list[int]) -> int:\n",
@@ -3025,6 +3027,237 @@
     "# Testing the solution\n",
     "assert minOperationsII([0,1,1,0,1]) == 4\n",
     "assert minOperationsII([1,0,0,0]) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b5d2df8",
+   "metadata": {},
+   "source": [
+    "LC Hard: Sliding window Maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68e953c1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxSlidingWindow(nums: list[int], k: int) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Maintain a deque of indices in monotonically decreasing order.\n",
+    "    - Remove out of bound indices\n",
+    "    - Maintain monotonicity\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    deq: collections.deque = collections.deque([])\n",
+    "    result: list[int] = []\n",
+    "    for i in range(N):\n",
+    "\n",
+    "        # Maintain monotonicity\n",
+    "        while deq and nums[deq[-1]] < nums[i]:\n",
+    "            deq.pop()\n",
+    "\n",
+    "        # Remove out of bound indices\n",
+    "        if deq and deq[0] < i - k + 1:\n",
+    "            deq.popleft()\n",
+    "\n",
+    "        # Add current element index\n",
+    "        deq.append(i)\n",
+    "\n",
+    "        # Add the current minimum to the result list\n",
+    "        if i >= k - 1:\n",
+    "            result.append(nums[deq[0]])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxSlidingWindow([1,3,-1,-3,5,3,6,7], 3) == [3,3,5,5,6,7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d101158",
+   "metadata": {},
+   "source": [
+    "LC Weekly: 23rd June 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8015249",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def minimumAverage(nums: list[int]) -> float:\n",
+    "    # Maintain two heaps\n",
+    "    min_heap: list[int] = list(nums)\n",
+    "    max_heap: list[int] = list(map(lambda x: -x, nums))\n",
+    "\n",
+    "    # Heapify both heaps\n",
+    "    heapq.heapify(min_heap)\n",
+    "    heapq.heapify(max_heap)\n",
+    "\n",
+    "    avg: float = math.inf\n",
+    "    while min_heap:\n",
+    "        min_, max_ = heapq.heappop(min_heap), -heapq.heappop(max_heap)\n",
+    "        avg = min(avg, (max_ + min_) / 2)\n",
+    "\n",
+    "    return avg\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumAverage([7,8,3,4,15,13,4,1]) == 5.5\n",
+    "assert minimumAverage([1,9,8,3,10,5]) == 5.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "472b03a2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def minimumArea(grid: list[list[int]]) -> int:\n",
+    "    N, M = len(grid), len(grid[0])\n",
+    "    min_x, min_y, max_x, max_y = N - 1, M - 1, 0, 0\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if grid[i][j] == 1:\n",
+    "                min_x, min_y, max_x, max_y = min(min_x, i), min(min_y, j), max(max_x, i), max(max_y, j)\n",
+    "\n",
+    "    return (max_x - min_x + 1) * (max_y - min_y + 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumArea([[0,1,0],[1,0,1]]) == 6\n",
+    "assert minimumArea([[0,0,0],[1,0,1]]) == 3\n",
+    "assert minimumArea([[0,0],[1,0]]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "023117b0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "def maximumTotalCostBrute(nums: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            max_partition = sum(nums[i:])\n",
+    "            partition_sum, sign = 0, 1\n",
+    "            for j in range(i, N):\n",
+    "                partition_sum += nums[j] * sign\n",
+    "                max_partition = max(max_partition, partition_sum + backtrack(j + 1))\n",
+    "                sign = -1 if sign == 1 else 1\n",
+    "\n",
+    "            return max_partition\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return backtrack(0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumTotalCostBrute([1,-2,3,4]) == 10\n",
+    "assert maximumTotalCostBrute([1,-1,1,-1]) == 4\n",
+    "assert maximumTotalCostBrute([0]) == 0\n",
+    "assert maximumTotalCostBrute([1,-1]) == 2\n",
+    "assert maximumTotalCostBrute([-15,8,12,-12]) == 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "335dd003",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Upsolving Q3\n",
+    "def maximumTotalCostRecursive(nums: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, prev_flipped: bool) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        elif nums[i] < 0 and not prev_flipped:\n",
+    "            return max(-nums[i] + backtrack(i + 1, True), nums[i] + backtrack(i + 1, False))\n",
+    "        else:\n",
+    "            return nums[i] + backtrack(i + 1, False)\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return backtrack(0, True)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumTotalCostRecursive([1,-2,3,4]) == 10\n",
+    "assert maximumTotalCostRecursive([1,-1,1,-1]) == 4\n",
+    "assert maximumTotalCostRecursive([1,-1]) == 2\n",
+    "assert maximumTotalCostRecursive([-15,8,12,-12]) == 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d49af69e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maximumTotalCostTabulation(nums: list[int]) -> int:\n",
+    "    N = len(nums)\n",
+    "    dp: list[list[int]] = [[0, 0] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(2):\n",
+    "            if nums[i] < 0 and j == 0:\n",
+    "                dp[i][j] = max(-nums[i] + dp[i + 1][1], nums[i] + dp[i + 1][0])\n",
+    "            else:\n",
+    "                dp[i][j] = nums[i] + dp[i + 1][0]\n",
+    "\n",
+    "    return dp[0][1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumTotalCostTabulation([1,-2,3,4]) == 10\n",
+    "assert maximumTotalCostTabulation([1,-1,1,-1]) == 4\n",
+    "assert maximumTotalCostTabulation([1,-1]) == 2\n",
+    "assert maximumTotalCostTabulation([-15,8,12,-12]) == 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f72bda9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maximumTotalCost(nums: list[int]) -> int:\n",
+    "    N = len(nums)\n",
+    "    dp: list[int] = [0, 0]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        dp = [max(-nums[i] + dp[1], nums[i] + dp[0]), nums[i] + dp[0]]\n",
+    "\n",
+    "    return dp[1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumTotalCost([1,-2,3,4]) == 10\n",
+    "assert maximumTotalCost([1,-1,1,-1]) == 4\n",
+    "assert maximumTotalCost([1,-1]) == 2\n",
+    "assert maximumTotalCost([-15,8,12,-12]) == 17"
    ]
   }
  ],
