--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -3448,6 +3448,7 @@
      "iopub.status.idle": "2024-06-23T08:41:37.475091Z",
      "shell.execute_reply": "2024-06-23T08:41:37.474564Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016252,
      "end_time": "2024-06-23T08:41:37.476092",
@@ -3472,6 +3473,91 @@
     "assert maximumTotalCost([1,-1,1,-1]) == 4\n",
     "assert maximumTotalCost([1,-1]) == 2\n",
     "assert maximumTotalCost([-15,8,12,-12]) == 17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69bf26e",
+   "metadata": {},
+   "source": [
+    "Codeforces: Round 954, starting at 9:00 PM IST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0b7d45",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# A.\n",
+    "def x_axis(n1: int, n2: int, n3: int) -> int:\n",
+    "    return min(abs(n1 - n2) + abs(n1 - n3), abs(n2 - n1) + abs(n2 - n3), abs(n3 - n1) + abs(n3 - n2))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert x_axis(1, 5, 9) == 8\n",
+    "assert x_axis(8, 2, 8) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb3d199f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# B.\n",
+    "def stabilize_matrix(N: int, M: int, matrix: list[list[int]]) -> list[list[int]]:\n",
+    "    def check(x: int, y: int) -> int:\n",
+    "        top = matrix[x - 1][y] if x - 1 >= 0 else -math.inf\n",
+    "        bottom = matrix[x + 1][y] if x + 1 < N else -math.inf\n",
+    "        left = matrix[x][y - 1] if y - 1 >= 0 else -math.inf\n",
+    "        right = matrix[x][y + 1] if y + 1 < M else -math.inf\n",
+    "        return int(max(top, bottom, left, right))\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            update_value = check(i, j)\n",
+    "            if update_value < matrix[i][j]:\n",
+    "                matrix[i][j] = update_value\n",
+    "\n",
+    "    return matrix\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stabilize_matrix(5, 4, [[92,74,31,74],[74,92,17,7], [31,17,92,3], [74,7,3,92], [7,31,1,1]]) == [[74,74,31,31],[74,74,17,7],[31,17,17,3],[31,7,3,3],[7,7,1,1]]\n",
+    "assert stabilize_matrix(2, 2, [[1,2],[3,4]]) == [[1,2],[3,3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac02e2c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# C.\n",
+    "def update_queries(N: int, M: int, original: str, indices: list[int], conversions: str) -> str:\n",
+    "    # Count repeated indices, we can remove as many conversions\n",
+    "    index_set: set[int] = {idx - 1 for idx in indices}\n",
+    "    conversions = ''.join(sorted(conversions)[:len(index_set)])\n",
+    "    mapping: dict[int, str] = dict(zip(sorted(index_set), conversions))\n",
+    "\n",
+    "    result: list[str] = []\n",
+    "    for i in range(N):\n",
+    "        if i not in mapping:\n",
+    "            result.append(original[i])\n",
+    "        else:\n",
+    "            result.append(mapping[i])\n",
+    "\n",
+    "    return ''.join(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert update_queries(4, 4, 'meow', [1,2,1,4], 'zcwz') == 'cwoz'\n",
+    "assert update_queries(7, 4, 'abacaba', [1,3,5,7], 'damn') == 'abdcmbn'"
    ]
   }
  ],
