--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -3580,6 +3580,7 @@
      "iopub.status.idle": "2024-06-23T17:07:50.623925Z",
      "shell.execute_reply": "2024-06-23T17:07:50.623476Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016942,
      "end_time": "2024-06-23T17:07:50.624972",
@@ -3610,6 +3611,99 @@
     "# Testing the solution\n",
     "assert update_queries(4, 4, 'meow', [1,2,1,4], 'zcwz') == 'cwoz'\n",
     "assert update_queries(7, 4, 'abacaba', [1,3,5,7], 'damn') == 'abdcmbn'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6caadf4",
+   "metadata": {},
+   "source": [
+    "LC Virtual: 24th June 2024\n",
+    "https://leetcode.com/contest/smarking-algorithm-contest-2/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb2002d5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def eraseOverlapIntervals(intervals: list[list[int]]) -> int:\n",
+    "     # Sort the intervals based on end time\n",
+    "    intervals.sort(key = lambda x: (x[1], x[0]))\n",
+    "\n",
+    "    # Iterate through and check for overlaps\n",
+    "    removed = 0\n",
+    "    prev = (intervals[0][0] - 1, intervals[0][0] - 1)\n",
+    "    for start, end in intervals:\n",
+    "        if start < prev[1]:\n",
+    "            removed += 1\n",
+    "        else:\n",
+    "            prev = start, end\n",
+    "\n",
+    "    return removed\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert eraseOverlapIntervals([[1,2],[2,3],[3,4],[1,3]]) == 1\n",
+    "assert eraseOverlapIntervals([[1,2],[1,2],[1,2]]) == 2\n",
+    "assert eraseOverlapIntervals([[1,2],[2,3]]) == 0\n",
+    "assert eraseOverlapIntervals([[1,100],[11,22],[1,11],[2,12]]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08c2da3e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "def arrangeCoins(n: int) -> int:\n",
+    "    low, high = 1, n\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if (mid * (mid + 1)) // 2 <= n:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert arrangeCoins(8) == 3\n",
+    "assert arrangeCoins(5) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68c0ef00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def findRightInterval(intervals: list[list[int]]) -> list[int]:\n",
+    "    N = len(intervals)\n",
+    "    sorted_intervals: list[tuple[int, int, int]] = sorted([(x[0], x[1], i) for i, x in enumerate(intervals)], key=lambda x: (x[0], x[1]))\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for i, (start, end) in enumerate(intervals):\n",
+    "        idx = bisect.bisect_right(sorted_intervals, (end, -math.inf, i))\n",
+    "        result.append(sorted_intervals[idx][2] if idx < N else -1)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findRightInterval([[1,4],[2,3],[3,4]]) == [-1,2,-1]\n",
+    "assert findRightInterval([[3,4],[2,3],[1,2]]) == [-1,0,1]\n",
+    "assert findRightInterval([[1,2]]) == [-1]\n",
+    "assert findRightInterval([[1,1],[3,4]]) == [0,-1]"
    ]
   }
  ],
