--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -246,6 +246,7 @@
      "iopub.status.idle": "2024-06-24T17:01:32.556743Z",
      "shell.execute_reply": "2024-06-24T17:01:32.556220Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007097,
      "end_time": "2024-06-24T17:01:32.557774",
@@ -278,6 +279,172 @@
     "assert large_addition(1393938) == True\n",
     "assert large_addition(200) == False\n",
     "assert large_addition(10) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80b62de1",
+   "metadata": {},
+   "source": [
+    "LC Virtual: 25th June 2024\n",
+    "https://leetcode.com/contest/smarking-algorithm-contest-3/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec2db856",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "# https://www.youtube.com/watch?v=x8T11yRLIyY\n",
+    "def minMoves(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Intution: Instead of increasing all n - 1 elements by 1 each time, try to decrement\n",
+    "    the max element to the smallest element. Relative distances between numbers are the same.\n",
+    "    \"\"\"\n",
+    "    nums.sort()\n",
+    "    result = 0\n",
+    "    for i in range(len(nums) - 1, -1, -1):\n",
+    "        result += nums[i] - nums[0]\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minMoves([1,2,3,4]) == 6\n",
+    "assert minMoves([1,2,3]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f751bf",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def numberOfBoomerangs(points: list[list[int]]) -> int:\n",
+    "    def distance(pt1: list[int], pt2: list[int]) -> float:\n",
+    "        return math.sqrt(((pt1[0] - pt2[0]) ** 2) + ((pt1[1] - pt2[1]) ** 2))\n",
+    "\n",
+    "    boommerangs: int = 0\n",
+    "    N = len(points)\n",
+    "    for i in range(N):\n",
+    "        curr = points[i]\n",
+    "        distances: dict[float, int] = dict()\n",
+    "        for j in range(N):\n",
+    "            if j != i:\n",
+    "                dist = distance(points[i], points[j])\n",
+    "                distances[dist] = distances.get(dist, 0) + 1\n",
+    "\n",
+    "        for count in distances.values():\n",
+    "            boommerangs += math.perm(count, 2)\n",
+    "\n",
+    "    return boommerangs\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfBoomerangs([[0,0],[1,0],[2,0]]) == 2\n",
+    "assert numberOfBoomerangs([[1,1],[2,2],[3,3]]) == 2\n",
+    "assert numberOfBoomerangs([[1,1]]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c17597",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "def findMinArrowShots(points: list[list[int]]) -> int:\n",
+    "    # Sort by end and merge the start, end\n",
+    "    points.sort(key=lambda x: (x[1], x[0]))\n",
+    "\n",
+    "    # Merge the intervals\n",
+    "    merged_intervals: list[tuple[int, int]] = []\n",
+    "    for start, end in points:\n",
+    "        if merged_intervals and merged_intervals[-1][1] >= start:\n",
+    "            merged_intervals[-1] = max(merged_intervals[-1][0], start), min(merged_intervals[-1][1], end)\n",
+    "        else:\n",
+    "            merged_intervals.append((start, end))\n",
+    "\n",
+    "    return len(merged_intervals)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findMinArrowShots([[10,16],[2,8],[1,6],[7,12]]) == 2\n",
+    "assert findMinArrowShots([[1,2],[3,4],[5,6],[7,8]]) == 4\n",
+    "assert findMinArrowShots([[1,2],[2,3],[3,4],[4,5]]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602ae596",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q4\n",
+    "def numberOfArithmeticSlicesBrute(nums: list[int]) -> int:\n",
+    "    def is_valid(sub: list[int]) -> bool:\n",
+    "        if len(sub) < 3:\n",
+    "            return False\n",
+    "        else:\n",
+    "            diff = sub[1] - sub[0]\n",
+    "            for i in range(len(sub) - 1):\n",
+    "                if sub[i + 1] - sub[i] != diff:\n",
+    "                    return False\n",
+    "            return True\n",
+    "\n",
+    "    count = 0\n",
+    "    def backtrack(i: int, subseq: list[int]):\n",
+    "        if i == N:\n",
+    "            count += is_valid(subseq)\n",
+    "        else:\n",
+    "            subseq.append(nums[i])\n",
+    "            backtrack(i + 1, subseq)\n",
+    "            subseq.pop()\n",
+    "            backtrack(i + 1, subseq)\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    backtrack(0, [])\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1e64142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upsolving\n",
+    "# https://www.youtube.com/watch?v=YIMwwT9JdIE\n",
+    "def numberOfArithmeticSlices(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Ending at index 'j' what is maximum number of arthimetic subsequences that I can form >= 2\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    dp: list[collections.defaultdict[int, int]] = [collections.defaultdict(int) for _ in range(N)]\n",
+    "    sub_count = dp_sum = 0\n",
+    "    for j in range(N):\n",
+    "        for i in range(j):\n",
+    "            delta = nums[i] - nums[j]\n",
+    "            dp[j][delta] += dp[i][delta] + 1\n",
+    "            sub_count, dp_sum = sub_count + 1, dp_sum + dp[i][delta] + 1\n",
+    "\n",
+    "    return dp_sum - sub_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfArithmeticSlices([2,4,6,8,10]) == 7\n",
+    "assert numberOfArithmeticSlices([7,7,7,7,7]) == 16"
    ]
   }
  ],
