--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -494,6 +494,7 @@
      "iopub.status.idle": "2024-06-25T18:57:24.853226Z",
      "shell.execute_reply": "2024-06-25T18:57:24.852778Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007835,
      "end_time": "2024-06-25T18:57:24.854244",
@@ -525,6 +526,102 @@
     "# Testing the solution\n",
     "assert numberOfArithmeticSlices([2,4,6,8,10]) == 7\n",
     "assert numberOfArithmeticSlices([7,7,7,7,7]) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79053be1",
+   "metadata": {},
+   "source": [
+    "LC VC: June 26th 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e438aa0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q4: Pattern 132\n",
+    "# https://www.youtube.com/watch?v=q5ANAl8Z458\n",
+    "# https://leetcode.com/problems/132-pattern/submissions/1301126531/\n",
+    "def find132pattern(nums: list[int]) -> bool:\n",
+    "    N = len(nums)\n",
+    "\n",
+    "    # Monotonic stack, storing min values till index - value, min pairs\n",
+    "    stack: list[tuple[int, int]] = []\n",
+    "    min_: int = nums[0]\n",
+    "\n",
+    "    for n in nums:\n",
+    "        while stack and stack[-1][0] <= n:\n",
+    "            stack.pop()\n",
+    "\n",
+    "        if stack and stack[-1][1] < n:\n",
+    "            return True\n",
+    "\n",
+    "        stack.append((n, min_))\n",
+    "        min_ = min(min_, n)\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert find132pattern([1,2,3,4]) == False\n",
+    "assert find132pattern([3,1,4,2]) == True\n",
+    "assert find132pattern([-1,3,2,0]) == True\n",
+    "assert find132pattern([3,1,2]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6afba366",
+   "metadata": {},
+   "source": [
+    "Balance a Binary Search tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47bab318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/balance-a-binary-search-tree/submissions/1301150197\n",
+    "def balanceBST(root: BinaryTreeNode) -> BinaryTreeNode|None:\n",
+    "    def createBalancedBST(nodes_: list[int]) -> BinaryTreeNode|None:\n",
+    "        N = len(nodes_)\n",
+    "        if N == 0:\n",
+    "            return None\n",
+    "        else:\n",
+    "            mid = N // 2\n",
+    "            root_: BinaryTreeNode = BinaryTreeNode(nodes_[mid])\n",
+    "            root_.left = createBalancedBST(nodes_[:mid])\n",
+    "            root_.right = createBalancedBST(nodes_[mid + 1:])\n",
+    "            return root_\n",
+    "\n",
+    "    # 1. Retrieve all elements in-order traversal (left, root, right), this returns an array in sorted order\n",
+    "    curr: BinaryTreeNode = root\n",
+    "    nodes: list[int] = []\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    while True:\n",
+    "        while curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        if stack:\n",
+    "            curr = stack.pop()\n",
+    "            nodes.append(curr.val)\n",
+    "            curr = curr.right\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    # 2. Create a BST from the nodes: Take the middle element as the root, create left and right subtree recursively\n",
+    "    return createBalancedBST(nodes)\n",
+    "\n",
+    "# Testing the solution\n",
+    "print(balanceBST(BinaryTreeNode.from_array([1,None,2,None,3,None,4,None,None])).to_list())"
    ]
   }
  ],
