LC Practice: 27th June 2024

--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -625,6 +625,7 @@
      "iopub.status.idle": "2024-06-26T17:40:59.918264Z",
      "shell.execute_reply": "2024-06-26T17:40:59.917788Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010038,
      "end_time": "2024-06-26T17:40:59.919364",
@@ -677,6 +678,97 @@
     "\n",
     "# Testing the solution\n",
     "print(balanceBST(BinaryTreeNode.from_array([1,None,2,None,3,None,4,None,None])).to_list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "304faf22",
+   "metadata": {},
+   "source": [
+    "LC Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ac43f3b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def subarraySum(nums: list[int], k: int) -> int:\n",
+    "    prefix: collections.defaultdict = collections.defaultdict(int)\n",
+    "    prefix[0], count, psum = 1, 0, 0\n",
+    "    for n in nums:\n",
+    "        psum += n\n",
+    "        count += prefix[psum - k]\n",
+    "        prefix[psum] += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert subarraySum([1,2,3], 3) == 2\n",
+    "assert subarraySum([1,1,1], 2) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b278e908",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/continuous-subarray-sum/submissions/1301461461/\n",
+    "def checkSubarraySum(nums: list[int], k: int) -> bool:\n",
+    "    N = len(nums)\n",
+    "    prefix: dict[int, int] = {0: -1}\n",
+    "    psum = 0\n",
+    "    for i in range(N):\n",
+    "        psum = (psum + nums[i]) % k\n",
+    "        if i - prefix.get(psum, i) >= 2:\n",
+    "            return True\n",
+    "        prefix[psum] = min(prefix.get(psum, i), i)\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert checkSubarraySum([23,2,4,6,7], 6) == True\n",
+    "assert checkSubarraySum([0], 1) == False\n",
+    "assert checkSubarraySum([23,2,6,4,7,13], 13) == False\n",
+    "assert checkSubarraySum([23,2,6,4,7,13,13], 13) == True\n",
+    "assert checkSubarraySum([1,0], 2) == False\n",
+    "assert checkSubarraySum([1,2,3,4], 6) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3ac55c5",
+   "metadata": {},
+   "source": [
+    "Check if array is sorted and rotated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c610bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkArraySortedAndRotated(nums: list[int]) -> bool:\n",
+    "    N = len(nums)\n",
+    "    count = 0\n",
+    "    for i in range(N - 1):\n",
+    "        count += nums[i + 1] < nums[i]\n",
+    "    return count == 0 or (count == 1 and nums[0] > nums[-1])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert checkArraySortedAndRotated([3,4,5,1,2]) == True\n",
+    "assert checkArraySortedAndRotated([2,1,3,4]) == False\n",
+    "assert checkArraySortedAndRotated([3,2,1]) == False"
    ]
   }
  ],
